Port over openeiapi.cpp and openeiutilityrateform.cpp from comlib and implement display and retrieval of current rates - not functional to apply rates nor upgraded to V3 yet.

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -26,6 +26,8 @@
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
     <ClCompile Include="..\src\gridsupport.cpp" />
+    <ClCompile Include="..\src\openeiapi.cpp" />
+    <ClCompile Include="..\src\openeiutilityrateform.cpp" />
     <ClCompile Include="..\src\p50p90.cpp" />
     <ClCompile Include="..\src\parametric.cpp" />
     <ClCompile Include="..\src\registration.cpp" />
@@ -66,6 +68,8 @@
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
     <ClInclude Include="..\src\gridsupport.h" />
+    <ClInclude Include="..\src\openeiapi.h" />
+    <ClInclude Include="..\src\openeiutilityrateform.h" />
     <ClInclude Include="..\src\p50p90.h" />
     <ClInclude Include="..\src\parametric.h" />
     <ClInclude Include="..\src\registration.h" />
