--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -128,6 +128,12 @@
     <ClInclude Include="..\src\p50p90.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\openeiapi.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\openeiutilityrateform.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -242,6 +248,12 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\p50p90.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\openeiapi.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\openeiutilityrateform.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
