added macro support with basic user interface. need to add some more macro support LK functions

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
     <ClCompile Include="..\src\gridsupport.cpp" />
+    <ClCompile Include="..\src\macro.cpp" />
     <ClCompile Include="..\src\openeiapi.cpp" />
     <ClCompile Include="..\src\openeiutilityrateform.cpp" />
     <ClCompile Include="..\src\p50p90.cpp" />
@@ -69,6 +70,7 @@
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
     <ClInclude Include="..\src\gridsupport.h" />
+    <ClInclude Include="..\src\macro.h" />
     <ClInclude Include="..\src\openeiapi.h" />
     <ClInclude Include="..\src\openeiutilityrateform.h" />
     <ClInclude Include="..\src\p50p90.h" />
