--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClInclude Include="..\src\stochastic.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\macro.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -260,6 +263,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\stochastic.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\macro.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
