reorganized openei utility rate code into one place: urdb.cpp/.h

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -27,8 +27,6 @@
     <ClCompile Include="..\src\graph.cpp" />
     <ClCompile Include="..\src\gridsupport.cpp" />
     <ClCompile Include="..\src\macro.cpp" />
-    <ClCompile Include="..\src\openeiapi.cpp" />
-    <ClCompile Include="..\src\openeiutilityrateform.cpp" />
     <ClCompile Include="..\src\p50p90.cpp" />
     <ClCompile Include="..\src\parametric.cpp" />
     <ClCompile Include="..\src\registration.cpp" />
@@ -60,6 +58,7 @@
     <ClCompile Include="..\src\stochastic.cpp" />
     <ClCompile Include="..\src\troughloop.cpp" />
     <ClCompile Include="..\src\uiobjects.cpp" />
+    <ClCompile Include="..\src\urdb.cpp" />
     <ClCompile Include="..\src\variablegrid.cpp" />
     <ClCompile Include="..\src\variables.cpp" />
     <ClCompile Include="..\src\welcome.cpp" />
@@ -71,8 +70,6 @@
     <ClInclude Include="..\src\graph.h" />
     <ClInclude Include="..\src\gridsupport.h" />
     <ClInclude Include="..\src\macro.h" />
-    <ClInclude Include="..\src\openeiapi.h" />
-    <ClInclude Include="..\src\openeiutilityrateform.h" />
     <ClInclude Include="..\src\p50p90.h" />
     <ClInclude Include="..\src\parametric.h" />
     <ClInclude Include="..\src\registration.h" />
@@ -104,6 +101,7 @@
     <ClInclude Include="..\src\stochastic.h" />
     <ClInclude Include="..\src\troughloop.h" />
     <ClInclude Include="..\src\uiobjects.h" />
+    <ClInclude Include="..\src\urdb.h" />
     <ClInclude Include="..\src\variablegrid.h" />
     <ClInclude Include="..\src\variables.h" />
     <ClInclude Include="..\src\welcome.h" />
