--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\adjfac.cpp" />
+    <ClCompile Include="..\src\defmgr.cpp" />
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
     <ClCompile Include="..\src\gridsupport.cpp" />
@@ -66,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\adjfac.h" />
+    <ClInclude Include="..\src\defmgr.h" />
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
     <ClInclude Include="..\src\gridsupport.h" />
