Updated wind BOS page. Added WIND toolkit resource data download button & updated defaults- not quite working but close. Fixed a bug in P50/P90 code and on Solar Resource UI page that did not detect SRW files. Updated error messages on the Wind Turbine design page to check for negative power curves.

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -140,6 +140,9 @@
     <ClInclude Include="..\src\defmgr.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\windtoolkit.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -266,6 +269,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\defmgr.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\windtoolkit.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
