--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -64,6 +64,7 @@
     <ClCompile Include="..\src\variables.cpp" />
     <ClCompile Include="..\src\welcome.cpp" />
     <ClCompile Include="..\src\widgets.cpp" />
+    <ClCompile Include="..\src\windtoolkit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\adjfac.h" />
@@ -108,6 +109,7 @@
     <ClInclude Include="..\src\variables.h" />
     <ClInclude Include="..\src\welcome.h" />
     <ClInclude Include="..\src\widgets.h" />
+    <ClInclude Include="..\src\windtoolkit.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectName>SAMnt</ProjectName>
