Updated wind BOS page. Added WIND toolkit resource data download button & updated defaults- not quite working but close. Fixed a bug in P50/P90 code and on Solar Resource UI page that did not detect SRW files. Updated error messages on the Wind Turbine design page to check for negative power curves.

--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -10,3 +10,5 @@ prospector_year=http://mapsdb.nrel.gov/sp_data/hourly_9809/<DIR>/radwx_<GRIDCODE
 prospector_typical=http://mapsdb.nrel.gov/sp_data/<TYPE>_9809/<DIR>/radwx_<GRIDCODE>_9809.tm2.gz	
 '<TYPE> can be tmy, tgy, or tdy
 historical_nsrdb=https://sam.nrel.gov/NSRDB
+windtoolkit=http://devstage.nrel.gov/api/wind/srw_aggregate_extract?api_key=DEMO_KEY&year=<YEAR>&lat=<LAT>&lon=<LON>
+'^THIS URL WILL CHANGE WHEN 3TIER DATA IS FINALIZED AND DEPLOYED. THIS URL IS FOR TESTING ONLY!!!!!!!!!!
