added beginnings of loss diagram object that is compatible with direct PDF rendering in a report as well as to the screen.

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="..\src\windtoolkit.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\lossdiag.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -272,6 +275,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\windtoolkit.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\lossdiag.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
