--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="..\src\parametric_qs.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\numericvareditform.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -284,6 +287,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\parametric_qs.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\numericvareditform.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
