rewrote NumericRangeDialog with sizers and moved to casewin.cpp #cleanup

--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -55,6 +55,7 @@ OBJECTS = ide.o \
 	object.o \
 	simplecurl.o \
 	variablegrid.o \
+	parametric_qs.o \
 	parametric.o \
 	welcome.o \
 	ptlayoutctrl.o \
