added biomass support for traditional residue and energy crop feedstock lookups via NREL databases #new

--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -11,3 +11,5 @@ prospector_typical=http://mapsdb.nrel.gov/sp_data/<TYPE>_9809/<DIR>/radwx_<GRIDC
 '<TYPE> can be tmy, tgy, or tdy
 historical_nsrdb=https://sam.nrel.gov/NSRDB
 windtoolkit=http://developer.nrel.gov/api/wind/srw_aggregate_extract?api_key=<KEY>&year=<YEAR>&lat=<LAT>&lon=<LON>
+biomass_resource=http://mapsdb.nrel.gov/georeserv/app/bio_power/combo.json
+energy_crop=http://developer.nrel.gov/api/biomass/btu_energy_feedstocks?api_key=<KEY>
